--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,40 +5,13 @@
 }
 
 body {
-    background-color: #d9dcd6;
-}
-
-.header {
-    padding: 20px;
+    font-size: 16px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
-    color: #ffffff;
+    color: #000000;
 }
 
-.header h1 {
-    display: inline-block;
-    font-size: 48px;
-}
-
-.header h1 .seo {
-    color: #d9dcd6;
-}
-
-.header div {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-}
-
-.header div ul {
-    list-style-type: none;
-}
-
-.header div ul li {
-    display: inline-block;
-    margin-left: 25px;
+h1, h2, h3, h4, h5, h6 {
+    padding: 20px;
 }
 
 a {
@@ -46,155 +19,157 @@ a {
     text-decoration: none;
 }
 
-p {
-    font-size: 16px;
+header {
+    margin-bottom: 30px;
+    background-color: #2a607c;
+}
+
+header h1 {
+    font-size: 48px;
+    color: #ffffff;
+}
+
+header h1 .seo {
+    color: #59c9a5;
+}
+
+header nav {
+    padding: 20px 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    background-color: #59c9a5;
+    text-align: center;
+}
+
+header nav ul {
+    list-style-type: none;
+}
+
+header nav ul li {
+    display: inline-block;
+}
+header nav ul li a {
+    padding: 20px;
+    color: #000000;
+}
+
+header nav ul li a:hover {
+    background-color: #287B5F;
+    color: #ffffff;
+}
+
+main {
+    margin: 70px auto 0;
+    width: 1200px;
+}
+
+section {
+    margin-bottom: 30px;
 }
 
 .hero {
-    height: 800px;
+    height: 520px;
     width: 100%;
-    margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    background: url("../images/digital-marketing-meeting.jpg") no-repeat fixed 0 -75px;
     background-size: cover;
-    background-position: center;
 }
 
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
-
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
+.divider {
+    margin: 60px auto;
+    width: 80%;
+    border-top: 3px solid #287B5F;
 }
 
 .benefits {
-    margin-right: 20px;
-    padding: 20px;
+    margin-bottom: 60px;
+}
+
+.benefits:after {
+    content: "";
+    display: table;
     clear: both;
+}
+
+.benefits div {
+    margin: 0 25px;
+    padding: 20px 40px;
+    float: left;
+    width: 350px;
+    border: 2px solid #2E4A76;
+    border-radius: 10px;
+    color: #000000;
+    text-align: center;
+}
+
+.benefits h2 {
+    text-align: center;
+}
+
+.benefits img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
+
+.contents {
+    /*width: 75%;
+    display: inline-block;
+    margin-left: 20px;*/
+}
+
+.content:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.content img {
+    width: 50%;
+}
+.content:nth-of-type(odd) {
+    background-color:#2E4A76;
+    color: #ffffff;
+}
+
+.content:nth-of-type(odd) img {
+    float: left;
+}
+
+.content:nth-of-type(even) img {
     float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
+.content-wrap h3 {
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.footer {
-    padding: 30px;
-    clear: both;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+footer {
+    margin-top: 60px;
+    padding: 15px 0;
+    font-size: 12px;
     text-align: center;
+    background-color: #1E1C21;
+    color: #ffffff;
 }
 
-.footer h2 {
-    font-size: 20px;
+.home {
+    position: fixed;
+    bottom: 40px;
+    right: 25px;
+    width: 60px;
+    height: 60px;
+    background-color: #ffffff;
+    border: 1px solid #555555;
+    border-radius: 50px;
+    text-align: center;
+    z-index: 999;
+}
+
+.home img {
+    width: 30px;
+    height: auto;
+}
+
+.home div {
+    color: #000000;
 }
